--- a/Programming/JavaScript/AJAX/Projects/01. Quiz_Application/index.html
+++ b/Programming/JavaScript/AJAX/Projects/01. Quiz_Application/index.html
@@ -42,6 +42,6 @@
     <h1>JavaScript Quiz</h1>
     <div class="output"></div>
     <button class="btn">Start Game</button>
-    <script src="a.js"></script>
+    <script src="ajax.js"></script>
   </body>
 </html>
